--- a/EasyReantalCarSystem_FrontEnd/pages/customerHome.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/customerHome.html
@@ -33,7 +33,7 @@
 <main>
   <div class="container row">
     <div class="col-md-3 mt-3" style="margin-left: 115px">
-      <div class="card">
+      <div class="card shadow border-0">
         <div class="card-body">
           <label for="inputSortType" class="form-label">Sort</label>
           <select id="inputSortType" class="form-select">
@@ -48,17 +48,17 @@
       </div>
     </div>
     <div class="col-md-6 mt-3">
-      <div class="card">
+      <div class="card shadow border-0">
         <div class="card-body">
           <h5 class="card-title">Find Your Perfect Rental Car Today</h5>
           <p class="card-text">Get to Know Your Rental Car: Features, Specs, and More on Our Vehicle Detail Page.</p>
-          <button class="btn btn-primary">Rent a Car</button>
+          <a href="../pages/rentalPage.html"><button class="btn btn-primary">Rent a Car</button></a>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="container table-responsive mt-4">
+<!--  <div class="container table-responsive mt-4">
     <table class="table">
       <thead>
       <tr>
@@ -81,6 +81,60 @@
       </thead>
       <tbody></tbody>
     </table>
+  </div>-->
+  <div class="container mt-4 row" style="margin-left: 6rem;">
+      <div class="col-md-3">
+        <div class="card shadow border-0" style="width: 18rem;">
+          <img src="../assets/images/car_detail_images/ANE_140219975_AR_-1_0.jpg" class="card-img-top" alt="#">
+          <div class="card-body">
+            <h5 class="card-title">Suzuki Celerio</h5>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Daily Rate Rs: 3300</li>
+            <li class="list-group-item">Monthly Rate Rs: 77220</li>
+            <li class="list-group-item">Transmission Type: Auto</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card shadow border-0" style="width: 18rem;">
+          <img src="../assets/images/car_detail_images/perodua%20axia.jpg" class="card-img-top" alt="#">
+          <div class="card-body">
+            <h5 class="card-title">Perodua Axia</h5>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Daily Rate Rs: 3800</li>
+            <li class="list-group-item">Monthly Rate Rs: 90200</li>
+            <li class="list-group-item">Transmission Type: Auto</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card shadow border-0" style="width: 18rem;">
+          <img src="../assets/images/car_detail_images/trd-and-modellista-enhancements-for-the-toyota-aqua-prius-c_100375068_l.jpg" class="card-img-top" alt="#">
+          <div class="card-body">
+            <h5 class="card-title">Toyota Prius C/Aqua</h5>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Daily Rate Rs: 5000</li>
+            <li class="list-group-item">Monthly Rate Rs: 110330</li>
+            <li class="list-group-item">Transmission Type: Auto</li>
+          </ul>
+        </div>
+      </div>
+    <div class="col-md-3">
+      <div class="card shadow border-0" style="width: 18rem;">
+        <img src="../assets/images/car_detail_images/Alto_K10-blue.png" class="card-img-top" alt="#">
+        <div class="card-body">
+          <h5 class="card-title">Suzuki Alto K-10</h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Daily Rate Rs: 3000</li>
+          <li class="list-group-item">Monthly Rate Rs: 71390</li>
+          <li class="list-group-item">Transmission Type: Auto</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </main>
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
