--- a/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
@@ -23,19 +23,19 @@
                             <a class="nav-link" href="#">Cars</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Bookings</a>
+                            <a class="nav-link" href="../pages/adminRentalConfirmation.html">Bookings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Driver</a>
+                            <a class="nav-link" href="../pages/adminDriverManage.html">Driver</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Driver Schedule</a>
+                            <a class="nav-link" href="../pages/adminScheduleManage.html">Driver Schedule</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Customer Details</a>
+                            <a class="nav-link" href="../pages/adminCustomerDetails.html">Customer Details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Payment</a>
+                            <a class="nav-link" href="../pages/payment.html">Payment</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
