--- a/EasyReantalCarSystem_FrontEnd/pages/adminScheduleManage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminScheduleManage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-dark-subtle">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">ECRS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,26 +17,29 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="../pages/adminDashBoard.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Car</a>
+                        <a class="nav-link" href="../pages/adminCarManage.html">Cars</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Bookings</a>
+                        <a class="nav-link" href="../pages/adminRentalConfirmation.html">Bookings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Driver</a>
+                        <a class="nav-link" href="../pages/adminDriverManage.html">Driver</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"href="#">Driver Schedule</a>
+                        <a class="nav-link active" href="#">Driver Schedule</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Customer Details</a>
+                        <a class="nav-link" href="../pages/adminCustomerDetails.html">Customer Details</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/payment.html">Payment</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <button class="btn btn-outline-dark">Log Out</button>
+                    <a href="../index.html"><button class="btn btn-outline-light">Log Out</button></a>
                 </form>
             </div>
         </div>
@@ -45,8 +48,8 @@
 <main>
     <div class="container row">
         <div class="col-md-3 mt-3" style="margin-left: 115px;">
-            <div class="card">
-                <div class="card-header fw-medium bg-primary">
+            <div class="card shadow border-0">
+                <div class="card-header fw-medium bg-primary text-white">
                     Change The Driver
                 </div>
                 <div class="card-body">
